# casadi

./: CMakeLists.txt
casadi/core/: mx.hpp
swig/python/: CMakeLists.txt
